# clawpanel

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  build.sh  index.html  package.json
.github/workflows/: release.yml
.windsurf/workflows/: release.md
docs/: architecture.md  docker-deploy.md  index.html  linux-deploy.md
scripts/: create-dmg-with-installer.sh  dev-api.js  install-mac.command  linux-deploy.sh  pre-commit.sh
src/: main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  assistant.rs  config.rs  logs.rs  memory.rs  mod.rs  updater.rs
src/components/: sidebar.js
src/lib/: auto-updater.js  markdown.js  openclaw-kb.js  tauri-api.js
src/pages/: assistant.js  chat.js  models.js  setup.js  skillhub.js  skills.js  update.js
src/style/: assistant.css  chat.css  components.css  pages.css
